src/components/Home/Service_Price.scss
@import './sassSettings';

.service-price {
   display: flex;
  @include mediaMobilesTablets() {
    flex-direction: column;
  }
  @include mediaSmartphones() {
    flex-direction: column;
  }
  @include mediaSmallSmartphones() {
    flex-direction: column;
  }
}
.service-price-img-block{
   @include flex(column, center);
   flex-basis: 40%;
  @include mediaSmartphones() {
    margin-bottom: 40px;
  }
  @include mediaSmallSmartphones() {
    margin-bottom: 30px;
  }
  transition: 0.2s ease-in-out;
}
.service-price-img {
   @include flex(none, center);
   margin: 0 0 0 10px;
 img {
  width: 300px;
  min-width: 110px;
  max-width: 100%;
  margin: 0 10px 10px 0px;
   }
}
.service-price-text-block {
  text-align: center;
  flex-basis: 60%;
  margin: auto 0;
   a {
     text-decoration: none;
     color: inherit;
   }
}
.service-price-title {
  font-size: $headerTextSize;
  font-weight: $boldText;
  margin: 20px 30px 0 30px;
}
.service-price-description {
  font-size: $descriptionTextSize;
  font-weight: $thinText;
  margin: 10px 30px 0 30px;
}
.service-button {
  @include homeBtn();
  margin: 10px auto;
}
.service-stick {
  font-size: calc(14px + 0.5vw);
}

